# StackOverflow-52591766

./: .gitignore  README.md  reproduce_issue.sh
MyLib/: CMakeLists.txt
MyLib/CMake/: MyLibConfig.cmake.in
MyLib/CMake/modules/: FindlibDep.cmake
MyLib/include/MyLib/: MyLib.hpp
MyLib/src/: MyLib.cpp
User/: CMakeLists.txt  main.cpp
